--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "ConsultaAlumnosDBConnectionString": "Data Source=ConsultaAlumnos.db"
+    "ConsultaTrabajadoresDBConnectionString": "Data Source=ConsultaTrabajadores.db"
   },
   "Authentication": {
     "SecretForKey": "thisisthesecretforgeneratingakey(mustbeatleast32bitlong)",
-    "Issuer": "https://localhost:7169", //Esto refiere a quién creó el token, en este caso la aplicación en localhost
-    "Audience": "consultaalumnosapi" //Esto refiere a quién está dirigido el token, es decir, se define para quién se supone que estamos creando este token. Acá se puede elegir cualquier string que quieran.
+    "Issuer": "https://localhost:7169", 
+    "Audience": "consultatrabajadoressapi" 
   },
   "mailSettings": {
     "mailFromAddress": "noreply@utn.frro.edu.ar"
